--- a/App.Api/appsettings.Development.json
+++ b/App.Api/appsettings.Development.json
@@ -2,6 +2,8 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
+      "Microsoft.Hosting.Lifetime": "Warning",
+      "Microsoft.EntityFrameworkCore.Database": "Warning",
       "Microsoft.AspNetCore": "Warning"
     }
   }
